--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "chrismlusk-frontend",
+  "name": "chrismlusk",
   "version": "1.0.0",
   "description": "The personal website of Chris Lusk",
   "main": "index.js",
   "scripts": {
     "dev": "next -p 8080",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "test": "NODE_ENV=test jest --watch",
     "heroku-postbuild": "npm run build"
   },
