--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "styled-components": "^4.1.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.8.0"
   }
 }
