--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "Chris Lusk",
   "license": "ISC",
   "dependencies": {
-    "next": "^7.0.2",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "next": "^8.0.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
